# cantica-secure

./: .gitignore  README.md  ROADMAP.md  Taskfile.yml
python/: README.md  pyproject.toml
python/src/cantica_secure/: __init__.py  config.py  contract.json  contract.py  importer.py  mail.py  presets.py  shim.py
python/src/cantica_secure/api/: auth.py  deps.py  directory.py  ui_config.py  users.py
python/src/cantica_secure/backends/: base.py  ldap.py  local.py  oidc.py  provision.py
python/src/cantica_secure/core/: apikeys.py  flags.py  jwt.py  keyauth.py  password.py
python/src/cantica_secure/orm/: db.py  migrate.py  models.py  seed.py
python/tests/: conftest.py  test_conformance.py  test_contract.py  test_coverage_gaps.py  test_cross_server.py  test_directory.py  test_host_integration.py  test_importer.py  test_secure.py  test_threats.py
ui/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
ui/src/: ThemeProvider.tsx  client.ts  index.ts  keys.ts  primitives.tsx  styles.css  theme.ts  transport.ts  types.ts
ui/src/forms/: AdminUsersPanel.tsx  ApiTokensPanel.tsx  DirectoryMappingsPanel.tsx  InviteRequestForm.tsx  KeyEnrolment.tsx  LoginForm.tsx  SessionWarningBadge.tsx
ui/tests/: components.test.tsx  fakeTransport.ts  units.test.ts
