[project]
name = "cantica-secure"
version = "0.1.0"
description = "Cantica Secure — shimmable authentication/authorization core for Cantica servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "PyJWT>=2.9",
    "cryptography>=42",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
ldap = ["ldap3>=2.9"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.28",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cantica_secure"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=cantica_secure --cov-report=term-missing --cov-fail-under=99"

[tool.uv]
package = true
